Sun Jan  4 11:05:03 2004  Joern Thyssen  <jth@gnubg.org>

	The hint dialog will now always show the w/g/bg's whereas the panelled
	analysis only shows the equity/MWC. Pressing the "details" button 
	will pop up the hint dialog.

	* gtkchequer.c: restore some of the old non-panel code

Sun Jan 4 2004 00:51:45   Jim Segrave <jes@jes-2.demon.nl>

	* makebearoff.c: va_start needs stdarg.h
	
Sat Jan  3 16:53:09 2004  Oystein Johansen <oystein@gnubg.org>

        * makebearoff.c: Add progress bar. (Win32 only)
	* makebearoff.rc: New file.

Sat Jan  3 14:32:46 2004  Joern Thyssen  <jth@gnubg.org>

	Some updates to EPCs:

	* gnubg.c (EPC): return mu and sigma if requested.
	* gnubg.c (ShowEPC): calculate GWC from mu and sigma.
	* onechequer.c (GWCFromMuSigma, GWCFromDist): new funtions.
	

Sat Jan  3 01:02:49 2004  Joern Thyssen  <jth@gnubg.org>

	* configure.in: look for socklen_t.

Fri Jan  2 19:23:09 2004  Oystein Johansen <oystein@gnubg.org>

        * render.c (RenderDice): Redesign the dice in the 2D board.
	* gtkboard.c (DrawDie): Redesign the dice in the dice selection
	dialog.

Fri Jan  2 12:14:52 2004  Joern Thyssen  <jth@gnubg.org>

	Use one chequer racing formulae from Zadeh & Kobliska, Management
	Science, 1977.

	* onechequer.c (GWCFromPipCount): new function. Delete obsolete
	OneChequer and GetDistFromPipCount.
	(change all callers)

Thu Jan  1 22:59:09 2004  Oystein Johansen <oystein@gnubg.org>

        * external.c: Add som #if USE_SOCKETS to make it compile w/o socket
	support.

Thu Jan  1 20:29:09 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (DisplayAnalysis, DisplayTimeAnalysis): show time analysis
	in cli.
	* gtkgame.c (TimeAnalysis, SetAnnotation): show time analysis
	in gui.
	* analysis.c, import.c: remove debug output
	* format.c (OutputMWCDiff): new function.

Thu Jan  1 18:56:50 2004  Joern Thyssen  <jth@gnubg.org>

	Report equity loss due to "time outs", e.g., when importing
	matches from TMG which ended with "time out".
	[USE_TIMECONTROL]
