@@ -1,3 +1,9 @@
+Sun Jan  4 13:35:16 2004  Joern Thyssen  <jth@gnubg.org>
+
+	* gtkchequer.c (CreateMoveList): remove the old layout version as
+	the new can do both versions.
+	(reported by Nardy)
+
 Sun Jan  4 11:05:03 2004  Joern Thyssen  <jth@gnubg.org>
 
 	The hint dialog will now always show the w/g/bg's whereas the panelled
